# rtl

./: .clang-format  .gitignore  CMakeLists.txt  Invite on interview  LICENSE  README.md
cmake/: rtlConfig.cmake.in
examples/: CMakeLists.txt
examples/malevich/: CMakeLists.txt  malevich.cpp
examples/noise/: CMakeLists.txt  noise.cpp
examples/voidness/: CMakeLists.txt  voidness.cpp
include/rtl/: algorithm.hpp  allocator.hpp  array.hpp  chrono.hpp  fix.hpp  fourcc.hpp  int.hpp  limits.hpp  math.hpp  memory.hpp  move.hpp  numeric.hpp  pair.hpp  random.hpp  ratio.hpp  string.hpp  type_traits.hpp  utility.hpp  vector.hpp
include/rtl/sys/: application.hpp  debug.hpp  filesystem.hpp  impl.hpp  keyboard.hpp  opencl.hpp  printf.hpp
include/rtl/sys/impl/: application.hpp  audio.hpp  chrono.hpp  debug.hpp  filesystem.hpp  heap.hpp  keyboard.hpp  memory.hpp  opencl.hpp  printf.hpp  startup.hpp  string.hpp  tests.hpp  win.hpp
include/rtl/sys/impl/app/: audio.hpp  environment.hpp  opengl.hpp  osd.hpp  proc.hpp  resize.hpp  resources.hpp  screen_buffer.hpp
include/rtl/sys/impl/opencl/: buffer.hpp  context.hpp  device.hpp  kernel.hpp  platform.hpp  program.hpp
