project(noise LANGUAGES C CXX)

add_executable(${PROJECT_NAME} WIN32 noise.cpp)
add_dependencies(${PROJECT_NAME} ${RTL_TARGET_NAME})
target_link_libraries(${PROJECT_NAME} ${RTL_TARGET_NAME})

target_compile_definitions(${PROJECT_NAME} 
    PRIVATE      
        RTL_ENABLE_ASSERT=0
        RTL_ENABLE_APP=1
        RTL_ENABLE_APP_AUDIO=0
        RTL_ENABLE_APP_CURSOR=1
        RTL_ENABLE_APP_CLOCK=0
        RTL_ENABLE_APP_FULLSCREEN=0
        RTL_ENABLE_APP_KEYS=1
        RTL_ENABLE_APP_OSD=0
        RTL_ENABLE_APP_OPENGL=0
        RTL_ENABLE_APP_OPENGL_VSYNC=0
        RTL_ENABLE_APP_RESET=0
        RTL_ENABLE_APP_RESIZE=0
        RTL_ENABLE_APP_RESOURCES=0
        RTL_ENABLE_APP_SCREEN_BUFFER=1
        RTL_ENABLE_APP_SINGLETON=0
        RTL_ENABLE_CHRONO_CLOCK=0
        RTL_ENABLE_HEAP=1
        RTL_ENABLE_LOG=0
        RTL_ENABLE_MEMSET=0
        RTL_ENABLE_OPENCL=0
        RTL_ENABLE_RUNTIME_CHECKS=0
        RTL_ENABLE_RUNTIME_TESTS=0
)

if(MSVC)
    string(REPLACE "/RTC1" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
    string(REPLACE "/EHsc" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
endif()
